[gd_scene load_steps=9 format=3 uid="uid://c8e8k8v6n4k7k"]

[ext_resource type="Script" uid="uid://r0a2ka37g32n" path="res://ui/item_editor.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bk14xau2vtj10" path="res://icons/basket.svg" id="2_mtfwf"]
[ext_resource type="Texture2D" uid="uid://b34exhdl0qy0" path="res://icons/blue_plus.svg" id="3_d58tb"]
[ext_resource type="Texture2D" uid="uid://c6cuujr78ghq1" path="res://icons/blue_minus.svg" id="3_mtfwf"]
[ext_resource type="Texture2D" uid="uid://cojmge4b1py4d" path="res://icons/blue_shoppingbags.svg" id="5_0jl7r"]
[ext_resource type="Texture2D" uid="uid://cgxxpdiymb2xd" path="res://icons/cart.svg" id="5_fkq6v"]
[ext_resource type="Texture2D" uid="uid://c0ux5p4utvdkk" path="res://icons/red_x.svg" id="7_0jl7r"]
[ext_resource type="Texture2D" uid="uid://dusf04w0l2hch" path="res://icons/blue_check.svg" id="7_20a4e"]

[node name="ItemEditor" type="Window"]
unique_name_in_owner = true
title = "Item Editor"
position = Vector2i(0, 36)
size = Vector2i(720, 720)
content_scale_mode = 1
content_scale_aspect = 4
content_scale_stretch = 1
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="DeleteBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "DELETE"
icon = ExtResource("2_mtfwf")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="NameLbl" type="Label" parent="VBox/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="VBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AmountLbl" type="Label" parent="VBox/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Amnt:"

[node name="MinusBtn" type="Button" parent="VBox/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("3_mtfwf")
expand_icon = true

[node name="AmountEdit" type="LineEdit" parent="VBox/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Amount"
expand_to_text_length = true

[node name="PlusBtn" type="Button" parent="VBox/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("3_d58tb")
icon_alignment = 1
expand_icon = true

[node name="UnitEdit" type="LineEdit" parent="VBox/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Unit"
max_length = 8

[node name="spacer" type="Control" parent="VBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PriceLbl" type="Label" parent="VBox/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Price:"

[node name="PriceEdit" type="LineEdit" parent="VBox/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Price â‚¬"
max_length = 7
keep_editing_on_text_submit = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="CategoryLbl" type="Label" parent="VBox/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Category:"

[node name="CategoryOption" type="OptionButton" parent="VBox/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "category"
popup/item_0/id = 0
popup/item_0/disabled = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="DescriptionLbl" type="Label" parent="VBox/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Description:"

[node name="DescriptionEdit" type="LineEdit" parent="VBox/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Description (optional)"
max_length = 160

[node name="HBoxContainer5" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="NeedBtn" type="Button" parent="VBox/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Need"
icon = ExtResource("5_0jl7r")
expand_icon = true

[node name="CartBtn" type="Button" parent="VBox/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Cart"
icon = ExtResource("5_fkq6v")
expand_icon = true

[node name="HSeparator2" type="HSeparator" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 2

[node name="SaveBtn" type="Button" parent="VBox/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 2
text = "Save"
icon = ExtResource("7_20a4e")

[node name="spacer" type="Control" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="spacer2" type="Control" parent="VBox/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelBtn" type="Button" parent="VBox/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
icon = ExtResource("7_0jl7r")
expand_icon = true
